--- a/locales/zh-HK.yml
+++ b/locales/zh-HK.yml
@@ -1,41 +1,41 @@
 components:
   language_switcher:
-    change_language: change language
+    change_language: 選擇語言
   theme_switcher:
-    theme: theme
-    change_theme: change theme
+    theme: 主題
+    change_theme: 主題更換
 pages:
   index:
-    title: 111nuxt 3[]awesome[]starter
+    title: cmer []nuxt 3[]中港組
   404:
-    title: page not found
+    title: 頁面丟失
+  about:
+    nav: 關於我們
+    title: 模板簡介
+    description: 這是一個模板簡介
   blank:
-    nav: blank
-    title: blank page
-    description: this is a blank page
-    just_blank_page_with_title: just blank page with title
-  post:
-    nav: post
-    title: post
-    description: this is a post page
+    nav: 單頁
+    title: 單頁模板
+    description: 這是一個單頁模板
+    just_blank_page_with_title: 這是一個單頁模板ma ?
   test:
-    nav: test
-    title: testing
-    description: this is a test page
-    counter: counter
+    nav: 內容模塊
+    title: 內容模塊
+    description: 這是一個內容模塊模板
+    counter: 計數
     increment: increment
     decrement: decrement
     reset: reset
     identity: identity
     full_name: fullName
-  about:
-    nav: getting started
-    title: getting started
-    description: this is a getting started page
+  post:
+    nav: 列表模板
+    title: 列表模板
+    description: 這是一個列表模塊模板
   setting:
-    nav: setting
-    title: setting
-    description: this is a setting page
+    nav: 頁面設置
+    title: 設置
+    description: 這是一個頁面設置模板 
     sections:
       validate_username:
         title: validate github profile
@@ -58,15 +58,15 @@ pages:
         title: directory listing
         description: if no index file is present within a directory, the directory contents will be displayed.
   dashboard:
-    nav: dashboard
-    title: dashboard
+    nav: 後臺頁面
+    title: CMER後臺
     index:
-      nav: home
-      title: home
+      nav: 首頁設置
+      title: 首頁細節
 banners:
-  welcome: hello, welcome to  %{app_name}!
+  welcome: 你好歡迎來到 %{app_name} !
 others:
-  learn_more: learn more
-  copy: copy
-  enabled: enabled
-  disabled: disabled
+  learn_more: 了解更多
+  copy: 複製
+  enabled: 啟用
+  disabled: 禁用
